# bench

./: .gitignore  .ruffignore  AGENT.md  AGENTS.md  CLAUDE.md  CLEAN_SLATE_AUDIT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRD-CONCURRENCY.md  PRD-DRAFT.md  PRD-REVIEW.md  README.md  REVIEW-HANDOFF.md  bench  final_eval_report.txt  pyproject.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
Plans/: research-inspect-advanced.md  research-inspect-core.md  research-inspect-infra.md  unified-dreaming-hinton-agent-addd41f54621808d7.md  unified-dreaming-hinton.md
bench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bench_cli/: __init__.py  __main__.py  agents.py  baseline.py  compare.py  config_group.py  dashboard.py  fixtures.py  identity.py  inspect.py  main.py  prices.py  provider.py  resolver.py  results.py  run.py  score.py  show.py  tasks_browser.py
doc/: EVAL-TASKS.md  IMPLEMENTATION-NOTES.md  SCORER_EXPLANATION_SCHEMA.md  SCORING-SYSTEM-PRD.md  TASK-QUICKSTART.md
docs/: ARCHITECTURAL-REFACTOR-BACKLOG.md  ARCHITECTURE.md  BENCH-VERIFICATION-RUNBOOK.md  EVAL-GUIDE.md  HANDOFF-BRAINCTL-CONTEXT-UPDATE-2026-06-19.md  NIM-ROUTE-VIABILITY-2026-06-19.md  PRD-ARCHITECTURAL-REVIEW.md  PRD-CONCURRENCY.md  PRD-COST-SCORER.md  PRD-DISCRIMINATIVE-EVAL.md  PRD-MODEL-CARDS.md  PRD-NVIDIA-SWEEP-READINESS.md  PRD-OPENROUTER-PRICING.md  PRD-SCORING-SYSTEM.md  PRD-TASK-SUITE-EXTENSION.md  PRD-scoring-redesign.md  STATISTICAL-SCORING-AND-IRT.md  score-compression-analysis.md  spec-scoring-redesign.md
logs/: 2026-04-10T22-52-17-00-00_smoke_VqSJGD6A4yLqbYcGZ99K3K.eval  2026-04-10T22-52-35-00-00_smoke_icDXEHezkNPatZqyykaZM8.eval  2026-04-10T22-52-52-00-00_smoke_hDGcBuXCdyCE8odAbFALzg.eval  2026-04-10T22-53-11-00-00_find-replace_RKk4GwZGEoxkwsCS2LwrXu.eval  2026-04-10T23-00-35-00-00_agent-smoke_FUrWFMF9n7hpNpn7JXUepq.eval  2026-04-10T23-02-15-00-00_agent-smoke_F3zdYtCeG2FZLYMq6HcKfj.eval  2026-04-10T23-03-53-00-00_agent-smoke_bHzQmgKzYNu8DjG2Kyw27B.eval  2026-04-10T23-07-10-00-00_agent-smoke_cN3BXSfx87bNrKThFmPkyh.eval  2026-04-10T23-10-04-00-00_agent-smoke_9q6yqA3GU5hQxXQaWrFByi.eval  2026-04-11T20-59-57-00-00_add-tests_Kz4vA6Q6C7iHdpvWVwrNuy.eval  2026-04-11T21-01-51-00-00_fix-bug_EP67sxBrPztociGBMrwW22.eval  2026-04-11T21-02-17-00-00_write-function_8Uh8UgdKftuZ2CeaTNgK8f.eval  2026-04-11T21-04-16-00-00_edit-file_Fk7ayRNGeW8Pg5oYhzaFrT.eval  2026-04-11T21-05-13-00-00_find-replace_bHCYGDUf4ETVHfMmiU6dNV.eval  2026-04-11T21-08-13-00-00_add-tests_KqNuHNPEBYcVA7HjrCzeAx.eval  2026-04-11T21-09-34-00-00_fix-bug_Wzdare9antG9tbhBUFpNjQ.eval  2026-04-11T21-10-20-00-00_write-function_WGJ2tXadPHhGqorugyRQrW.eval  2026-04-11T21-10-47-00-00_edit-file_JiYpc4HDhMaVMR5XnFuKKR.eval  2026-04-11T21-11-22-00-00_find-replace_inxXJSsBCCWwt98uUXjfbG.eval  2026-04-12T14-45-59-00-00_add-tests_b6B2JLeH2FeuhDgra5eeaj.eval  2026-04-12T14-46-56-00-00_fix-bug_RKpuvTiDwXKFb6pN9eBUn8.eval  2026-04-12T14-47-29-00-00_write-function_CXUemHJvudQ7cj6YiMUmZw.eval  2026-04-12T14-48-43-00-00_edit-file_YUB4yYqJKzpg6xiAYJL9Rw.eval  2026-04-12T14-49-20-00-00_find-replace_jkVU9CPZ92bcr5F4ZYUTMm.eval  2026-04-12T14-52-55-00-00_add-tests_ZAdCLRgHbVzYS32XPNdEyR.eval  2026-04-12T14-54-57-00-00_fix-bug_ntBqwXMBZ2AMayPskQvBkG.eval  2026-04-12T14-55-36-00-00_write-function_mygp7ajfkttbVw9ZMEYqha.eval  2026-04-12T14-56-58-00-00_edit-file_Xat9EkLvJ5bcCbAZFK7ETr.eval  2026-04-12T14-58-00-00-00_find-replace_LRcJgyG38ZUya8cjkXb3W7.eval  2026-04-12T15-11-40-00-00_add-tests_EgE5ELVpyScS4MtqWDdZmn.eval  2026-04-12T15-12-54-00-00_fix-bug_7wNzyCJD7qE5b8tH5TmGXW.eval  2026-04-12T15-13-37-00-00_write-function_dM9i6zzkWcxSsg2YRuukUo.eval  2026-04-12T15-14-07-00-00_edit-file_bhKqMvoRhEgeZ7p7Xwt8AB.eval  2026-04-12T15-14-40-00-00_find-replace_kvBGmWYRcMCnpCYySScDb2.eval  2026-04-12T21-40-53-00-00_agent-smoke_hQPDbDWgaoguDuAqKVVmVX.eval  2026-04-12T21-42-30-00-00_smoke_CMGKabyQCNZNrPmsDAsiPz.eval  2026-04-12T21-55-20-00-00_f1-multi-file-verify_CmFZGRjM3MBcKGfQ6t5yCE.eval  2026-04-12T21-56-46-00-00_f10-env-mismatch_5YCTBmqrBzqoZgiTFZ7TNy.eval  2026-04-12T21-58-24-00-00_f11-intermittent-bug_AnLPTGQcfj7rX4bBVwHZ2c.eval  2026-04-12T22-00-18-00-00_f12-surgical-fix_kQ4wqebyWfwW9fDany9WNm.eval  (+14 more)
results/: deepseek-ai-deepseek-v4-flash.md  deepseek-ai-deepseek-v4-pro.md  deepseek-deepseek-v4-flash.md  deepseek-deepseek-v4-pro.md  default__claude__docker__claude__docker.md  default__claude__local__claude__local.md  glm-plan-5.2.md  google-diffusiongemma-26b-a4b-it.md  google-gemma-4-26b-a4b.md  huihui-qwen3.5-35b-a3b-claude-4.6-opus-abliterated.md  kimi-k3.md  minimax-minimax-m2.7.md  minimax-minimax-m2.7__claude__docker.md  minimax-minimax-m3.md  mistralai-devstral-2512.md  mistralai-mistral-small-2603.md  moonshotai-kimi-k2.7-code.md  nvidia-nemotron-3-nano-30b-a3b.md  nvidia-nemotron-3-nano-omni-30b-a3b-reasoning.md  nvidia-nemotron-3-nano-omni-30b-a3b-reasoning:free.md  nvidia-nemotron-3-super-120b-a12b.md  nvidia-nemotron-3-super-120b-a12b:free.md  nvidia-nemotron-3-ultra-550b-a55b.md  nvidia-nemotron-3-ultra-550b-a55b:free.md  nvidia-qwen-next.md  openai-gemma-4-26-local.md  openai-gemma-4-e2-local.md  openai-qwen-local.md  openai-qwen-local__claude__local.md  openai-qwen-local__claude__local__claude__local.md  qwen-local__claude__local__claude__local.md  qwen-qwen3-next-80b-a3b-instruct.md  qwen-qwen3.7-plus.md  tencent-hy3:free.md  xiaomi-mimo-v2.5-pro.md  z-ai-glm-5-turbo.md  z-ai-glm-5.1.md  z-ai-glm-5.2.md
scorers/: __init__.py  _utils.py  baseline_store.py  composite.py  composite_safety.py  constraint.py  efficiency.py  exec_scorer.py  execution_safety.py  fixtures.py  hybrid.py  instruction_overhead.py  judge_rubric_template.md  llm_judge.py  output_safety.py  patterns.py  price_ratio.py  protocol.py  ratio_recompute.py  reference_model.py  safety.py  subproc.py  task_budgets.py  time_ratio.py  token_ratio.py  tool_call_efficiency.py  verify_sh.py
scripts/: kimi-k3-crawl-tasks.txt  kimi-k3-crawl.sh  probe_nim_routes.py  report_viability.py  run_all_evals.sh  run_eval_tasklist.sh  (+1 more)
(+410 files in other folders)
