[project]
name = "bench"
version = "0.1.0"
description = "Local LLM and AI agent evaluation system"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Michael Mazyar" },
]
keywords = ["llm", "evaluation", "benchmark", "ai", "inspect-ai", "cli"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Benchmark",
]

dependencies = [
    "inspect-ai>=0.3.205",
    "openai>=1.0",
    "click>=8.0",
    "python-dotenv>=1.0",
]

[project.scripts]
bench = "bench_cli.main:cli"

[project.optional-dependencies]
agent = [
    "inspect-swe>=0.2.46",
    "anthropic>=0.30",
]
dev = [
    "ruff>=0.15",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bench_cli*"]

[tool.setuptools.package-data]
bench_cli = ["py.typed"]

# ---------------------------------------------------------------------------
# Ruff — modern Python linter
# ---------------------------------------------------------------------------
[tool.pytest]
pythonpath = ["."]
testpaths = ["tests"]

# ---------------------------------------------------------------------------
# Ruff — modern Python linter
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 100

# Rule sets
lint.select = [
    # Core — catches real bugs
    "F",      # pyflakes: unused imports/variables, undefined names
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings

    # Ruff-native rules
    "RUF",    # ruff-specific rules

    # Modern Python idioms
    "UP",     # pyupgrade — use modern Python syntax

    # Quality
    "B",      # flake8-bugbear — bugs and probable bugs
    "C4",     # flake8-comprehensions — comprehension best practices
    "PERF",   # perflint — performance anti-patterns

    # Type stubs
    "PYI",    # flake8-pyi — type stub conventions

    # Import ordering
    "I",      # isort — import sorting

    # Docstrings (errors only — avoid docstring style wars)
    "D100",   # Missing docstring in public module
    "D101",   # Missing docstring in public class
    "D102",   # Missing docstring in public method
    "D104",   # Missing docstring in public package
    "D200",   # One-line docstring should fit on one line
    "D205",   # 1 blank line required between summary line and body
    "D400",   # First line should end with period
    "D415",   # First line should end with period, question mark, or exclamation point

    # Annotations
    "ANN",    # flake8-annotations — type annotation rules
]

# Ignore selected rules globally
lint.ignore = [
    "ANN401", # dynamically typed expressions in annotations — too strict for dynamic eval code
]

[tool.ruff.lint.per-file-ignores]
# Task files — Inspect AI uses @task decorator which requires untyped functions
"tasks/**/*.py" = [
    "ANN",    # missing type annotations on task funcs
    "E501",   # task docstrings are intentionally descriptive and can exceed 100 chars
    "D100",   # module docstrings optional for task/fixture files
]
# All fixture files (including fixtures_helpers/ and nested fixtures/)
"tasks/**/fixtures*/**/*.py" = [
    "F",      # unused imports, undefined names — intentional in fixture code
    "ANN",    # no type annotations expected
    "D",      # no docstrings expected
    "UP035",  # typing.Dict/List acceptable in eval fixture code
    "PERF401", # list comprehension suggestion not always clearer in fixture code
    "B007",   # unused loop variable names acceptable in test fixtures
    "B011",   # assert False used intentionally in negative test fixtures
    "RUF013", # implicit Optional acceptable in fixture code
    "PERF203", # try/except in retry loops intentional in fixture code
    "C416",   # unnecessary list() call acceptable in fixture code
]
# Test files — skip annotations, docstrings, and unused variable unpackings in shell calls
"tests/*" = [
    "ANN",    # test files often skip type annotations
    "D",      # docstrings optional in tests
    "E402",   # sys.path.insert before imports — intentional
    "E501",   # long lines common in test data strings and assertions
    "RUF059", # unpacked `rc`/`stderr` from shell calls in tests are intentionally unused
    "RUF012", # mutable default in pytest parametrize — harmless, mark as ClassVar if needed
]
# Discriminative module — data classes with intentional math notation (sigma/multiplication)
"bench_cli/discriminative/*" = [
    "D101",   # dataclasses and enums are self-documenting
    "D102",   # properties are obvious from field names
    "ANN001", # private helpers use Inspect eval log objects — hard to annotate
    "RUF001", # sigma symbol is standard in statistics notation
    "RUF002", # sigma in docstrings is intentional
    "RUF003", # multiplication sign is standard in formulas
    "PERF401", # list.extend over simple loops is micro-optimization
    "UP037",  # quoted SubjectID type needed for TYPE_CHECKING
]
# CLI bootstrap — sys.path.insert() before imports is intentional
"bench_cli/main.py" = ["E402"]
"bench_cli/compare.py" = ["E402"]
# Inspect CLI uses intentionally long table formatting strings
"bench_cli/inspect/cli.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["bench_cli", "scorers"]
case-sensitive = false
